--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Aplicación para gestionar y controlar ejemplares de una biblioteca",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node back/server.js",
+    "dev":  "SET NODE_ENV=DEVELOPMENT & nodemon back/server",
+    "prod": "SET NODE_ENV=PRODUCTION & nodemon back/server"
   },
   "repository": {
     "type": "git",
